# quadrupole

./: .gitignore  .readthedocs.yaml  Cargo.toml  PyPI_README.md  README.md  iupac_atomic_weights.toml  pyproject.toml  pytest.toml
.github/workflows/: code_coverage.yml  publish.yml  test_errors.yml  test_geometry.yml  test_quadrupole.yml  tests.yml
docs/: api_reference.rst  conf.py  element.rst  element_enum.rst  elementlike_type.rst  geometry.rst  index.rst  module_structure.rst  quadrupole.rst  quadrupole_class.rst  theory.rst  user_guide.rst
docs/_static/: quadrupole.css
docs/source/: conf.py  index.rst
notebook/: quadrupole_analysis.ipynb
quadrupole/: __init__.py  elements.py  geometry.py  quadrupole.py
src/: elements.rs  geometry.rs  lib.rs  quadrupole.rs
src/elements/: PubChemElements_all.toml  elements_csv_to_toml.ipynb  iupac_atomic_weights.html  iupac_atomic_weights.toml  write_elements.py  write_rust_elements.ipynb
test_files/: water.xsf  water.xyz  water_aligned.out  water_xz_plane.out
tests/: test_errors.py  test_geometry.py  test_quadrupole.py
tests/files/: missing_atoms.cjson  no_cell.cjson  simple_cell.cjson  water.xsf  water_opt_improper.out  water_random.xyz  water_random_rotation.out  water_scf.out  water_scf_improper.out  wrong_version.cjson
