[project]
name = "quadrupole"
version = "0.1.8"
description = "Classes for reading and manipulating molecular quadrupole moments."
readme = "PyPI_README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Brock Dyer", email = "brockdyer03@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[project.urls]
Repository = "https://github.com/brockdyer03/quadrupole"
