[project]
name = "quadrupole"
version = "0.4.0"
description = "Classes for reading and manipulating molecular quadrupole moments."
readme = "PyPI_README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Brock Dyer", email = "brockdyer03@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
]
classifiers = [
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-random-order>=1.2.0",
    "ruff>=0.14.10",
]
docs = [
    "sphinx>=9.1.0",
    "pydata-sphinx-theme>=0.16.1, <0.17.0", # https://github.com/pydata/pydata-sphinx-theme/issues/2349
    "numpydoc>=1.10.0",
    "sphinx-design>=0.7.0",
]

[project.urls]
source = "https://github.com/brockdyer03/quadrupole"
docs = "https://quadrupole.readthedocs.io/en/latest/index.html"
issues = "https://github.com/brockdyer03/quadrupole/issues"
